--- a/resource/css/questionStyle.css
+++ b/resource/css/questionStyle.css
@@ -1,7 +1,8 @@
 
 body{
     background-image: url("../QuestionBackground.jpg");
-    background-size: 100%;
+    background-size: 130%;
+    background-repeat: no-repeat;
     margin:auto;
     padding:0;
 }
